2015-11-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml.py (write_ndarray): We have 7 Tensors not just 6...

2015-11-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml.py (write_ndarray): Fixed writing of Vectors.

2015-11-17  Oliver Lemke  <olemke@core-dump.info>

	* DESCRIPTION.rst: Mention that this package is for Python 3.

	* typhon/arts/xml.py:

	Strings in ARTS XML files must be enclosed in double quotes.

	Replaced double quotes with single quotes around strings in Python
	source code for consistency.

	Rename etree to ElementTree for clarity.

	* typhon/arts/tests/reference/arrayofstring.xml: Updated.

2015-11-17  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml.py:

	Add writing support for all basic and matpack types.

	Add support for reading gzipped xml files.

	* typhon/arts/tests/reference/array.xml: Renamed to vector.

	* typhon/arts/tests/test_matpack_types.py:

	Renamed array to vector.

	Added tests for loading ArrayOf{Index,String}.

	* setup.py: Add Python 3.5 to supported languages.

2015-11-11  Oliver Lemke  <olemke@core-dump.info>

	* Uploaded version 0.0.4 to pypi.

	* typhon/__init__.py: Increased version number after pypi upload.

2015-11-10  Robin Ekelund  <robin.ekelund@chalmers.se>

	* typhon/legacy/arts_types.py:
	
	Added functions 'assp2backcoef', 'assp2g' and 'checkassp' to the 
	SingleScatteringData class. The functions calculates backscattering,
 	assymmetry coefficient and performs a self-check respectively.

2015-11-06  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/files/utils.py(decompress):

	- Add lzma support if available.

2015-11-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/__init__.py (test):

	Fix bug that broke function if invoked in other directories than typhon/.
	The needed path is now determined using the __file__ variable.

2015-11-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/tests/reference:

	Added directory which includes several test XML files.
